// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitDiff renders 1`] = `
<table
  className="split-diff"
>
  <tbody>
    <tr
      key="0"
    >
      <td
        className="split-view-cell removed-row"
      >
        <div
          className="split-diff-row"
        >
          <span
            className="split-view-word removed"
            key="0"
          >
            restaurant
          </span>
        </div>
      </td>
      <td
        style={
          Object {
            "width": 20,
          }
        }
      />
      <td
        className="split-view-cell added-row"
      >
        <div
          className="split-diff-row"
        >
          <span
            className="split-view-word added"
            key="0"
          >
            aura
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`SplitDiff renders with newlines 1`] = `
<table
  className="split-diff"
>
  <tbody>
    <tr
      key="0"
    >
      <td
        className="split-view-cell removed-row"
      >
        <div
          className="split-diff-row"
        >
          <span
            className="split-view-word removed"
            key="0"
          >
            this is my restaurant
          </span>
        </div>
      </td>
      <td
        style={
          Object {
            "width": 20,
          }
        }
      />
      <td
        className="split-view-cell added-row"
      >
        <div
          className="split-diff-row"
        >
          <span
            className="split-view-word added"
            key="0"
          >
            aura
          </span>
        </div>
      </td>
    </tr>
    <tr
      key="1"
    >
      <td
        className="split-view-cell removed-row"
      >
        <div
          className="split-diff-row"
        >
          <span
            className="split-view-word removed"
            key="0"
          >
                and restaurant
          </span>
        </div>
      </td>
      <td
        style={
          Object {
            "width": 20,
          }
        }
      />
      <td
        className="split-view-cell added-row"
      >
        <div
          className="split-diff-row"
        >
          <span
            className="split-view-word added"
            key="0"
          >
                and your aura
          </span>
        </div>
      </td>
    </tr>
    <tr
      key="2"
    >
      <td
        className="split-view-cell"
      >
        <div
          className="split-diff-row"
        >
          <span
            className="split-view-word"
            key="0"
          >
                common
          </span>
        </div>
      </td>
      <td
        style={
          Object {
            "width": 20,
          }
        }
      />
      <td
        className="split-view-cell"
      >
        <div
          className="split-diff-row"
        >
          <span
            className="split-view-word"
            key="0"
          >
                common
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
